adding prisma lib

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DATABASE_URL=postgres://postgres:abc123@104.248.229.81:8080/websocket
+# "build": "npx prisma db push --schema=./prisma/schema.prisma && npx prisma generate --schema=./prisma/schema.prisma && node ./prisma/seed.js && next build",
